--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@teovilla/react-native-web-maps": "^0.9.4",
+    "@vis.gl/react-google-maps": "^0.7.1",
     "expo": "~50.0.13",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
+    "expo-modules-core": "^1.11.12",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
