--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
-    "@teovilla/react-native-web-maps": "^0.9.4",
+    "@types/react": "~18.2.45",
     "@vis.gl/react-google-maps": "^0.7.1",
     "expo": "~50.0.13",
     "expo-constants": "~15.4.5",
+    "expo-image-picker": "^14.7.1",
     "expo-linking": "~6.2.2",
     "expo-modules-core": "^1.11.12",
     "expo-router": "~3.4.8",
@@ -24,11 +25,11 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.5",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-maps": "^1.11.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
